--- a/Foresome/Foresome/Onboarding/Location/View/LocationViewController.xib
+++ b/Foresome/Foresome/Onboarding/Location/View/LocationViewController.xib
@@ -38,7 +38,7 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="41"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHr-Lj-ir6">
-                            <rect key="frame" x="24" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="15" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="RxS-zS-ojM"/>
                                 <constraint firstAttribute="height" constant="40" id="f3b-WI-6Ng"/>
@@ -64,7 +64,7 @@
                         <constraint firstItem="a4h-3x-Tyy" firstAttribute="top" secondItem="zHr-Lj-ir6" secondAttribute="bottom" id="LS9-A3-28U"/>
                         <constraint firstAttribute="bottom" secondItem="a4h-3x-Tyy" secondAttribute="bottom" id="eNx-Ve-Pmb"/>
                         <constraint firstItem="a4h-3x-Tyy" firstAttribute="leading" secondItem="KPy-bn-hiT" secondAttribute="leading" id="khw-fG-kXC"/>
-                        <constraint firstItem="zHr-Lj-ir6" firstAttribute="leading" secondItem="KPy-bn-hiT" secondAttribute="leading" constant="24" id="nuV-y0-WNd"/>
+                        <constraint firstItem="zHr-Lj-ir6" firstAttribute="leading" secondItem="KPy-bn-hiT" secondAttribute="leading" constant="15" id="nuV-y0-WNd"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p65-t0-KfY">
@@ -77,16 +77,13 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your location." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhw-nX-V15">
-                            <rect key="frame" x="24" y="85" width="345" height="50"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="50" id="dCj-C6-bvW"/>
-                            </constraints>
+                            <rect key="frame" x="24" y="85" width="345" height="21"/>
                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                             <color key="textColor" red="0.56470588239999997" green="0.57647058819999997" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2H-UW-uQS">
-                            <rect key="frame" x="24" y="165" width="345" height="56"/>
+                            <rect key="frame" x="24" y="136" width="345" height="56"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EYm-rE-J0G">
                                     <rect key="frame" x="305" y="16" width="24" height="24"/>
@@ -104,6 +101,7 @@
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DXN-19-gja">
                                     <rect key="frame" x="5" y="0.0" width="295" height="56"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="textColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -132,7 +130,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Coh-hN-tOQ">
-                            <rect key="frame" x="24" y="283" width="345" height="56"/>
+                            <rect key="frame" x="24" y="625" width="345" height="56"/>
                             <color key="backgroundColor" red="0.25098039220000001" green="0.80392156859999997" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="Drf-pD-gjz"/>
@@ -151,10 +149,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BKR-je-kFz">
-                            <rect key="frame" x="24" y="359" width="345" height="56"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="56" id="23i-k0-nT8"/>
-                            </constraints>
+                            <rect key="frame" x="24" y="689" width="345" height="33"/>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" title="Skip For Now">
@@ -173,21 +168,22 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
+                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="leading" secondItem="v2H-UW-uQS" secondAttribute="leading" id="0yh-Pi-S5U"/>
                         <constraint firstItem="n3p-Lk-6mT" firstAttribute="leading" secondItem="p65-t0-KfY" secondAttribute="leading" constant="24" id="3lE-nS-gJM"/>
                         <constraint firstItem="v2H-UW-uQS" firstAttribute="leading" secondItem="nhw-nX-V15" secondAttribute="leading" id="4D9-7n-Fbj"/>
                         <constraint firstItem="n3p-Lk-6mT" firstAttribute="top" secondItem="p65-t0-KfY" secondAttribute="top" constant="32" id="5e0-DZ-lIc"/>
-                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="trailing" secondItem="v2H-UW-uQS" secondAttribute="trailing" id="Bg4-tM-cA2"/>
+                        <constraint firstItem="BKR-je-kFz" firstAttribute="top" secondItem="Coh-hN-tOQ" secondAttribute="bottom" constant="8" id="CBR-bq-iHe"/>
                         <constraint firstAttribute="trailing" secondItem="n3p-Lk-6mT" secondAttribute="trailing" constant="24" id="Cev-8e-yGZ"/>
+                        <constraint firstItem="BKR-je-kFz" firstAttribute="trailing" secondItem="Coh-hN-tOQ" secondAttribute="trailing" id="JoV-xu-1AJ"/>
+                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="trailing" secondItem="v2H-UW-uQS" secondAttribute="trailing" id="LAx-im-UiR"/>
                         <constraint firstItem="v2H-UW-uQS" firstAttribute="trailing" secondItem="nhw-nX-V15" secondAttribute="trailing" id="MaD-oi-NGj"/>
-                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="top" secondItem="v2H-UW-uQS" secondAttribute="bottom" constant="62" id="Pq9-ck-mAe"/>
-                        <constraint firstItem="BKR-je-kFz" firstAttribute="leading" secondItem="Coh-hN-tOQ" secondAttribute="leading" id="S86-m7-xe4"/>
                         <constraint firstItem="nhw-nX-V15" firstAttribute="trailing" secondItem="n3p-Lk-6mT" secondAttribute="trailing" id="W6i-bE-pVu"/>
-                        <constraint firstItem="BKR-je-kFz" firstAttribute="top" secondItem="Coh-hN-tOQ" secondAttribute="bottom" constant="20" id="WQh-7j-UWg"/>
                         <constraint firstItem="v2H-UW-uQS" firstAttribute="top" secondItem="nhw-nX-V15" secondAttribute="bottom" constant="30" id="dMg-Qj-gIk"/>
-                        <constraint firstItem="BKR-je-kFz" firstAttribute="trailing" secondItem="Coh-hN-tOQ" secondAttribute="trailing" id="ly6-rJ-VDk"/>
+                        <constraint firstAttribute="bottom" secondItem="BKR-je-kFz" secondAttribute="bottom" constant="30" id="l1b-vQ-xAN"/>
+                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="v2H-UW-uQS" secondAttribute="bottom" constant="20" id="mqU-iq-lcR"/>
                         <constraint firstItem="nhw-nX-V15" firstAttribute="leading" secondItem="n3p-Lk-6mT" secondAttribute="leading" id="pu4-cK-dMm"/>
                         <constraint firstItem="nhw-nX-V15" firstAttribute="top" secondItem="n3p-Lk-6mT" secondAttribute="bottom" constant="8" id="r9F-KK-S7k"/>
-                        <constraint firstItem="Coh-hN-tOQ" firstAttribute="leading" secondItem="v2H-UW-uQS" secondAttribute="leading" id="w2i-EU-r8d"/>
+                        <constraint firstItem="BKR-je-kFz" firstAttribute="leading" secondItem="Coh-hN-tOQ" secondAttribute="leading" id="wQR-cI-5m1"/>
                     </constraints>
                 </view>
             </subviews>
