--- a/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
+++ b/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
@@ -35,7 +35,7 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abH-5b-PYA">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="759.66666666666663"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header_logo" translatesAutoresizingMaskIntoConstraints="NO" id="e4D-Nc-NDp">
                                     <rect key="frame" x="24" y="16" width="345" height="40"/>
@@ -53,21 +53,21 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZg-PQ-inZ">
-                                            <rect key="frame" x="0.0" y="44.666666666666657" width="137.33333333333334" height="33"/>
+                                            <rect key="frame" x="0.0" y="44.666666666666657" width="136" height="33"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New here?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl2-Bu-5LD">
-                                                    <rect key="frame" x="0.0" y="0.0" width="79.333333333333329" height="33"/>
-                                                    <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="78" height="33"/>
+                                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                                     <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9EX-Nh-uYg">
-                                                    <rect key="frame" x="79.333333333333329" y="0.0" width="57.999999999999986" height="33"/>
+                                                    <rect key="frame" x="78" y="0.0" width="58" height="33"/>
                                                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                                     <color key="tintColor" name="Signup color"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" title="Sign up">
-                                                        <color key="titleColor" name="Signup color"/>
+                                                        <color key="titleColor" red="0.2196078431372549" green="0.50980392156862742" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </state>
                                                     <connections>
                                                         <action selector="signUpAction:" destination="-1" eventType="touchUpInside" id="E7k-AA-Tk6"/>
@@ -85,6 +85,7 @@
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yF2-2g-Yi0">
                                                     <rect key="frame" x="16" y="0.0" width="329" height="56"/>
+                                                    <color key="tintColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="56" id="RiO-Lf-hsO"/>
                                                     </constraints>
@@ -123,6 +124,7 @@
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LXY-u4-XnQ">
                                                     <rect key="frame" x="16" y="0.0" width="238" height="56"/>
+                                                    <color key="tintColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="56" id="Qxt-ju-VUw"/>
                                                     </constraints>
@@ -166,7 +168,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gHY-KC-xOL">
-                                    <rect key="frame" x="24" y="379" width="345" height="344"/>
+                                    <rect key="frame" x="24" y="379.66666666666674" width="345" height="344"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ixo-15-gPh">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
@@ -199,7 +201,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-Z2-Vvg">
-                                            <rect key="frame" x="0.0" y="144" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="143.99999999999994" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="OLa-LG-oku"/>
                                             </constraints>
@@ -223,7 +225,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tu9-xs-IOD">
-                                            <rect key="frame" x="0.0" y="216" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="215.99999999999994" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="rtw-jq-VZE"/>
                                             </constraints>
@@ -247,7 +249,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2Z-od-1aS">
-                                            <rect key="frame" x="0.0" y="288" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="287.99999999999994" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="D6J-LE-eDX"/>
                                             </constraints>
@@ -273,9 +275,12 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAv-R2-rwU">
-                                    <rect key="frame" x="217.33333333333337" y="317" width="151.66666666666663" height="34.333333333333314"/>
+                                    <rect key="frame" x="219.33333333333337" y="317" width="149.66666666666663" height="35"/>
+                                    <color key="tintColor" red="0.18823529411764706" green="0.47843137254901957" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Forgot password"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Forgot password">
+                                        <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
+                                    </buttonConfiguration>
                                     <connections>
                                         <action selector="forgotPasswordAction:" destination="-1" eventType="touchUpInside" id="OiD-BX-mj7"/>
                                     </connections>
