--- a/Foresome/Foresome/Storyboards/Base.lproj/Main.storyboard
+++ b/Foresome/Foresome/Storyboards/Base.lproj/Main.storyboard
@@ -93,6 +93,9 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RbQ-5c-xTV">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gTy-Ks-nWz"/>
                     </connections>
