--- a/Foresome/Foresome/AfterLogin/Tournament/Cell/TournamentTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/Tournament/Cell/TournamentTableCell.xib
@@ -27,7 +27,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="6dg-rH-qsf">
                         <rect key="frame" x="20" y="0.0" width="668" height="176"/>
-                        <color key="backgroundColor" red="0.21960784310000001" green="0.50980392159999999" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="176" id="BGh-B1-3eN"/>
                         </constraints>
